<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="fill"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|fill_horizontal"
        android:id="@+id/query_edit_text"
        android:hint="@string/queryPrompt"
        android:imeOptions="actionNext" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/query_edit_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tag_linear_layout">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tag_edit_text"
            android:layout_weight="1"
            android:layout_gravity="bottom|fill_horizontal"
            android:hint="@string/tagPrompt"
            android:imeOptions="actionDone" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_image_button"
            android:layout_weight="0"
            android:src="@android:drawable/ic_menu_save"
            android:contentDescription="@string/saveDescription"
            android:clickable="false"
            android:onClick="saveButtons" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_below="@+id/tag_linear_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="fill"
        android:layout_above="@+id/clear_tags_button"
        android:background="@android:color/holo_blue_bright">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/taggedSearches"
            android:id="@+id/tagged_searches_textview"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/tagged_searches_padding"
            android:layout_marginBottom="@dimen/tagged_searches_padding"
            android:id="@android:id/list" />


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_tags"
        android:id="@+id/clear_tags_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>








